--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>SampleRails2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%= favicon_link_tag 'img/albero.png' %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+</head>
+<body>
+  <header class="top-nav">
+    <div class="nav-left">
+      <h1><%= yield :title || 'Basso Legnami logistics' %></h1>
+    </div>
+    <div class="nav-right">
+      <%= link_to 'Logout', logout_path, class: 'logout-button' %>
+    </div>
+  </header>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <div class="sidebar" id="sidebar">
+    <div class="logo">
+      <button class="toggle-button" onclick="toggleSidebar()">☰</button>
+      <%= link_to image_tag('img/logo.png', alt: 'Logo'), root_path %>
+    </div>
+  </div>
 
-  <body>
+  <main>
     <%= yield %>
-  </body>
+  </main>
+
+  <script>
+    function toggleSidebar() { /* JavaScript originale */ }
+    function showSubmenu(menuId) { /* JavaScript originale */ }
+    document.addEventListener("DOMContentLoaded", function() { /* JavaScript originale */ });
+  </script>
+</body>
 </html>
