--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,2 @@
-<% content_for :title do %>
-  Home
-<% end %>
-
-<div class="content" id="submenu-container">
-  <div class="welcome-message">
-    <%= image_tag 'img/albero.png', alt: 'Albero', class: 'welcome-image' %>
-    <h1>Benvenuto nel portale logistico</h1>
-    <p>Seleziona una voce dal menu per iniziare a gestire le operazioni di magazzino.</p>
-  </div>
-</div>
+<h1>Home#index</h1>
+<p>Find me in app/views/home/index.html.erb</p>
