--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,12 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
 <body>
+  <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+  
   <header class="top-nav">
     <div class="nav-left">
       <h1><%= yield :title || 'Basso Legnami logistics' %></h1>
-    </div>
-    <div class="nav-right">
-      <%= link_to 'Logout', logout_path, class: 'logout-button' %>
     </div>
   </header>
 
