--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="welcome">
+  <h1>Basso Legnami</h1>
+  <p>Scopri i nostri prodotti e servizi.</p>
+</div>
